[package]
name = "cortex-labs-website-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
color-eyre = "0.6.2"
diesel = "2.2.4"
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.12.8", features = ["json"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
